updated run-microscope.sh